--- a/typescript-projects/package.json
+++ b/typescript-projects/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.4.0",
+    "recoil": "^0.7.7",
     "tailwindcss": "^4.0.15"
   },
   "devDependencies": {
